pve-container (1.0-61) unstable; urgency=medium

  * add support for ubuntu xenial

  * push/pull permissions: use octal by default

  * fix #942: restore ACL and other rootfs options from backup

 -- Proxmox Support Team <support@proxmox.com>  Wed, 20 Apr 2016 11:25:34 +0200

pve-container (1.0-60) unstable; urgency=medium

  * vm_status: return more verbose HA state

 -- Proxmox Support Team <support@proxmox.com>  Tue, 19 Apr 2016 09:04:43 +0200

pve-container (1.0-59) unstable; urgency=medium

  * setup: ability to ignore files

  * Fix #929: delete veths in the post-stop hook

 -- Proxmox Support Team <support@proxmox.com>  Wed, 13 Apr 2016 10:32:03 +0200

pve-container (1.0-58) unstable; urgency=medium

  * Build-Depend on pve-doc-generator

  * generate manpages with pve-doc-generator

  * debian: support containers upgraded to use systemd

 -- Proxmox Support Team <support@proxmox.com>  Wed, 06 Apr 2016 12:36:29 +0200

pve-container (1.0-57) unstable; urgency=medium

  * Add authorized ssh key setup to post_create_hook

  * Add missing '\n' to content in ct_modify_file

  * Add 'perms' option to ct_modify_file

 -- Proxmox Support Team <support@proxmox.com>  Tue, 05 Apr 2016 15:29:22 +0200

pve-container (1.0-56) unstable; urgency=medium

  * use consistent prefix for worker names

 -- Proxmox Support Team <support@proxmox.com>  Mon, 04 Apr 2016 16:39:28 +0200

pve-container (1.0-55) unstable; urgency=medium

  * add read_password sub for 'pct create'

  * use asciicode compatible markup

  * enable quotas for passed through /dev devices

  * Fix #925: activate volume before trying to resize

 -- Proxmox Support Team <support@proxmox.com>  Fri, 01 Apr 2016 07:20:36 +0200

pve-container (1.0-54) unstable; urgency=medium

  * Fix #918: add /dev/mapper symlinks for dm-* devices

  * autodev: create missing paths

 -- Proxmox Support Team <support@proxmox.com>  Fri, 18 Mar 2016 16:35:01 +0100

pve-container (1.0-53) unstable; urgency=medium
