@@ -40,6 +40,11 @@ sub new {
 sub setup_init {
     my ($self, $conf) = @_;
 
+    my $systemd = $self->ct_readlink('/sbin/init');
+    if (defined($systemd) && $systemd =~ m@/systemd$@) {
+	$self->setup_container_getty_service(1);
+    }
+
     my $filename = "/etc/inittab";
     return if !$self->ct_file_exists($filename);
 
@@ -69,11 +74,6 @@ sub setup_init {
     }
 
     $self->ct_file_set_contents($filename, $inittab);
-
-    my $systemd = $self->ct_readlink('/sbin/init');
-    if (defined($systemd) && $systemd =~ m@/systemd$@) {
-	$self->setup_container_getty_service(1);
-    }
 }
 
 sub remove_gateway_scripts {
