@@ -6,6 +6,8 @@ pve-container (1.0-61) unstable; urgency=medium
 
   * fix #942: restore ACL and other rootfs options from backup
 
+  * Debian: correctly setup getty service on systemd based containers
+
  -- Proxmox Support Team <support@proxmox.com>  Wed, 20 Apr 2016 11:25:34 +0200
 
 pve-container (1.0-60) unstable; urgency=medium
